--- a/joinservice/internal/server/BUILD.bazel
+++ b/joinservice/internal/server/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "//internal/attestation",
         "//internal/constants",
         "//internal/crypto",
+        "//internal/file",
         "//internal/grpc/grpclog",
         "//internal/logger",
         "//internal/versions/components",
@@ -30,9 +31,11 @@ go_test(
     deps = [
         "//internal/attestation",
         "//internal/constants",
+        "//internal/file",
         "//internal/logger",
         "//internal/versions/components",
         "//joinservice/joinproto",
+        "@com_github_spf13_afero//:afero",
         "@com_github_stretchr_testify//assert",
         "@com_github_stretchr_testify//require",
         "@io_k8s_kubernetes//cmd/kubeadm/app/apis/kubeadm/v1beta3",
