--- a/internal/constellation/helm/charts/edgeless/constellation-services/charts/join-service/templates/daemonset.yaml
+++ b/internal/constellation/helm/charts/edgeless/constellation-services/charts/join-service/templates/daemonset.yaml
@@ -53,9 +53,8 @@ spec:
             - mountPath: /var/secrets/google
               name: gcekey
               readOnly: true
-            - mountPath: /var/run/state/ssh/principals
-              name: principals
-              readOnly: true
+            - mountPath: /var/run/state/ssh
+              name: ssh
           ports:
             - containerPort: {{ .Values.joinServicePort }}
               name: tcp
@@ -77,7 +76,7 @@ spec:
         - name: kubeadm
           hostPath:
             path: /etc/kubernetes
-        - name: principals
+        - name: ssh
           hostPath:
-            path: /var/run/state/ssh/principals
+            path: /var/run/state/ssh
   updateStrategy: {}
