--- a/bootstrapper/internal/addresses/BUILD.bazel
+++ b/bootstrapper/internal/addresses/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("//bazel/go:go_test.bzl", "go_test")
 
 go_library(
     name = "interfaces",
@@ -12,4 +13,14 @@ go_library(
     srcs = ["addresses.go"],
     importpath = "github.com/edgelesssys/constellation/v2/bootstrapper/internal/addresses",
     visibility = ["//bootstrapper:__subpackages__"],
+)
+
+go_test(
+    name = "addresses_test",
+    srcs = ["addresses_test.go"],
+    deps = [
+        ":addresses",
+        "@com_github_stretchr_testify//assert",
+        "@com_github_stretchr_testify//require",
+    ],
 )
