--- a/joinservice/internal/server/BUILD.bazel
+++ b/joinservice/internal/server/BUILD.bazel
@@ -39,6 +39,7 @@ go_test(
         "@com_github_stretchr_testify//assert",
         "@com_github_stretchr_testify//require",
         "@io_k8s_kubernetes//cmd/kubeadm/app/apis/kubeadm/v1beta3",
+        "@org_golang_x_crypto//ssh",
         "@org_uber_go_goleak//:goleak",
     ],
 )
