--- a/.github/actions/e2e_emergency_ssh/action.yml
+++ b/.github/actions/e2e_emergency_ssh/action.yml
@@ -29,11 +29,10 @@ runs:
           ProxyJump none
 
         Host *
-          StrictHostKeyChecking no
-          UserKnownHostsFile=/dev/null
           IdentityFile ./access-key
           PreferredAuthentications publickey
           CertificateFile=constellation_cert.pub
+          UserKnownHostsFile=./known_hosts
           User root
           ProxyJump $lb
         EOF
