--- a/.github/actions/e2e_emergency_ssh/action.yml
+++ b/.github/actions/e2e_emergency_ssh/action.yml
@@ -23,9 +23,12 @@ runs:
         lb="$(terraform output -raw loadbalancer_address)"
         popd
 
+        lb_ip="$(gethostip $lb | awk '{print $2}')"
+        echo "Resolved ip of load balancer: $lb_ip"
+
         # write ssh config
         cat > ssh_config <<EOF
-        Host $lb
+        Host $lb_ip
           ProxyJump none
 
         Host *
@@ -34,7 +37,7 @@ runs:
           CertificateFile=constellation_cert.pub
           UserKnownHostsFile=./known_hosts
           User root
-          ProxyJump $lb
+          ProxyJump $lb_ip
         EOF
 
         for i in {1..26}; do
