fix: correct argument passing [skip ci]

--- a/image/sysroot-tree/etc/systemd/system/sshd-keygen@.service.d/override.conf
+++ b/image/sysroot-tree/etc/systemd/system/sshd-keygen@.service.d/override.conf
@@ -2,4 +2,4 @@
 ConditionFileNotEmpty=|!/var/run/state/ssh/ssh_host_%i_key
 
 [Service]
-ExecStart=/usr/bin/ssh-keygen -q -t %i -f /var/run/state/ssh/ssh_host_%i_key -C "" -N ""
+ExecStart=/usr/bin/bash -c "/usr/bin/ssh-keygen -q -t %i -f /var/run/state/ssh/ssh_host_%i_key -C '' -N ''"
