--- a/image/base/mkosi.skeleton/usr/lib/systemd/system/constellation-bootstrapper.service
+++ b/image/base/mkosi.skeleton/usr/lib/systemd/system/constellation-bootstrapper.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Constellation Bootstrapper
 Wants=network-online.target
-Wants=sshd-keygen.target
+Requires=sshd-keygen.target
 After=network-online.target configure-constel-csp.service
 After=export_constellation_debug.service
 
