fix: run after keygen [skip ci]

--- a/image/base/mkosi.skeleton/usr/lib/systemd/system/constellation-bootstrapper.service
+++ b/image/base/mkosi.skeleton/usr/lib/systemd/system/constellation-bootstrapper.service
@@ -4,6 +4,7 @@ Wants=network-online.target
 Requires=sshd-keygen.target
 After=network-online.target configure-constel-csp.service
 After=export_constellation_debug.service
+After=sshd-keygen@ed25519.service
 
 [Service]
 Type=simple
