fix: reference sshd-keygen.target instead of service [skip ci]

--- a/image/base/mkosi.skeleton/usr/lib/systemd/system/constellation-bootstrapper.service
+++ b/image/base/mkosi.skeleton/usr/lib/systemd/system/constellation-bootstrapper.service
@@ -2,7 +2,7 @@
 Description=Constellation Bootstrapper
 Wants=network-online.target
 Requires=sshd-keygen.target
-After=network-online.target configure-constel-csp.service sshd-keygen@ed25519.service
+After=network-online.target configure-constel-csp.service sshd-keygen.target
 After=export_constellation_debug.service
 
 [Service]
